# Slevinoids

./: CMakeLists.txt  README.md
include/: Slevinoids.h  Slevinorids.h  SpaceObject.h
src/: Slevinoids.cpp  Slevinorids.cpp  SpaceObject.cpp  main.cpp
